--- a/index.html
+++ b/index.html
@@ -7,36 +7,51 @@
     <title>Kirill Resume</title>
     <meta name="keywords" content="Kirill, cv, resume">
     <meta name="description" content="Это сайт - резюме Кирилла Шарова">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<img src="мое фото.jpg" width="220">
+<div class="container">
+
+<div class="info"> 
+<img src="мое фото.jpg" alt="Кирилл Шаров" class="avatar">
+
+<div class="info">
 <h1>Кирилл Шаров</h1>
 <p>Я студент 1 курса <strong> технического университета.</strong>
 <br>
-<br>
-Я люблю,<em>путешествовать, узнавать много нового о мире, а еще обожаю заниматься своим любимым делом.</em></p>
+
+</div>
+Я люблю <em> путешествовать, узнавать много нового о мире, а еще обожаю заниматься своим любимым делом.</em></p>
+<div class="card4">
 <p><Strong>Список социальных сетей:</Strong></p>
-<br>
 <a href="https://vk.com/omoikaneee" 
 target="_blank">VK</a>
 |
 <a href="https://t.me/Sharov89" 
  target="_blank">Telegram</a>
+</div>
+ <br>
+ <br>
+</div>
+</div>
+<div class="card1">
  <h2>Мои хобби</h2>
- <ul>
+ <ul class="list">
 <li>Путешествия</li>
 <li>Легкая атлетика</li>
 <li>Плавание</li>
 </ul>
+</div>
+<div class="card2">
 <h2>Опыт учёбы</h2>
-<table>
-  <thead>
+<table class="table">
+<!-- <thead>
      <tr>
        <th>Название</th>
        <th>Специальность</th>
        <th>Год</th>
      </tr>
-  </thead>
+  </thead>-->
   <tbody>
     <tr>
       <td>Школа</td>
@@ -60,30 +75,45 @@ target="_blank">VK</a>
     </tr>
   </tbody>
 </table>
-<h2>Связаться со мной</h2>
-<form action="/">
-<div>
+</div>
+<div class="card3">
+
+<form action="/" сlass="form">
+ <h2>Связаться со мной</h2>
+
+<div class="form-row">
+
+
+<div class="form-group">
 <label for="name">Ваше имя:</label>
 <input type="text" id="name"
 placeholder="Введите имя">
+ </div>
 </div>
 
-<div>
-<label for="text">Ваш email:</label>
-<input type="text" id="text"
+
+<div class="form-group">
+<label for="email">Ваш email:</label>
+<input type="email" id="email"
 placeholder="Введите email">
 </div>
 
-<div>
+<div class="form-group">
 <label for="message">Ваше сообщение:</label>
-<br>
 <textarea id="message" cols="10" rows="5" placeholder="Введите сообщение..."></textarea> 
 </div>
-<!-- input type="submit" value="Отправить!">
--->
-<button type="submit">Отправить!</button>  
+ <input class="btn" type="submit" value="Отправить!">
+
+
 
 </form> 
+</div>
 
+<br>
+<br>
+<br>
+<br>
+<br>
+</div>
 </body>
 </html>
