--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
 
 <div class="info">
 <h1>Кирилл Шаров</h1>
-<p>Я студент 1 курса <strong> технического университета.</strong>
-<br>
-
+<p>Я студент <strong>технического университета.</strong></p>
+Я люблю <em> путешествовать, узнавать много нового о мире, а еще обожаю заниматься лёгкой атлетикой.</em></p>
 </div>
-Я люблю <em> путешествовать, узнавать много нового о мире, а еще обожаю заниматься своим любимым делом.</em></p>
 <div class="card4">
 <p><Strong>Список социальных сетей:</Strong></p>
 <a href="https://vk.com/omoikaneee" 
@@ -30,7 +28,6 @@ target="_blank">VK</a>
 <a href="https://t.me/Sharov89" 
  target="_blank">Telegram</a>
 </div>
- <br>
  <br>
 </div>
 </div>
@@ -78,7 +75,7 @@ target="_blank">VK</a>
 </div>
 <div class="card3">
 
-<form action="/" сlass="form">
+<form action="/" сlass="form ">
  <h2>Связаться со мной</h2>
 
 <div class="form-row">
